@@ -107,6 +107,7 @@ gnulib_modules="
     getopt-gnu
     gettext
     gettimeofday
+    git-version-gen
     gpl-3.0
     hash
     human
