@@ -25,3 +25,4 @@
 /warn-on-use.h
 /ylwrap
 /gendocs.sh
+/git-version-gen
